# FlexRP

./: .clang-format  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  README.md  vcpkg.json
apps/: CMakeLists.txt
apps/client/: CMakeLists.txt  FlexRP_ismrmrd_client.cpp  flexrp_client.cpp  flexrp_client.h
apps/logger/: configuration.cpp  configuration.h  logger.cpp  logger.h
apps/server/: CMakeLists.txt  Flexrp_xml.cpp  Flexrp_xml.h  main.cpp
cmake/: FindFFTW3.cmake  FindZeroMQ.cmake  clang_tools.cmake
common/: CMakeLists.txt
common/LogClient/: CMakeLists.txt  logger.cpp  logger.h
common/LogServer/: CMakeLists.txt  configuration.cpp  configuration.h  fileUtility.cpp  fileUtility.h  main.cpp
common/include/: zhelpers.hpp
common/logger/: CMakeLists.txt  configuration.cpp  configuration.h  logger.cpp  logger.h
docker/: Dockerfile
docker/ubuntu_19.04/: Dockerfile
docs/: Doxyfile
docs/html/: Base__Modules_8cpp.html  Base__Modules_8cpp__incl.map  Base__Modules_8cpp__incl.md5  Base__Modules_8h.html  Base__Modules_8h__dep__incl.map  Base__Modules_8h__dep__incl.md5  Base__Modules_8h__incl.map  Base__Modules_8h__incl.md5  Base__Modules_8h_source.html  FlexRP__ismrmrd__client_8cpp.html  FlexRP__ismrmrd__client_8cpp__incl.map  FlexRP__ismrmrd__client_8cpp__incl.md5  README_8md.html  annotated.html  classFlexRP_1_1Module__Sink__1-members.html  classFlexRP_1_1Module__Sink__1.html  classFlexRP_1_1Module__Sink__1__inherit__graph.map  classFlexRP_1_1Module__Sink__1__inherit__graph.md5  classFlexRP_1_1Module__Sink__2-members.html  classFlexRP_1_1Module__Sink__2.html  classFlexRP_1_1Module__Sink__2__inherit__graph.map  classFlexRP_1_1Module__Sink__2__inherit__graph.md5  classFlexRP_1_1Module__Worker__1-members.html  classFlexRP_1_1Module__Worker__1.html  classFlexRP_1_1Module__Worker__1__inherit__graph.map  classFlexRP_1_1Module__Worker__1__inherit__graph.md5  classFlexRP_1_1Module__Worker__2-members.html  classFlexRP_1_1Module__Worker__2.html  classFlexRP_1_1Module__Worker__2__inherit__graph.map  classFlexRP_1_1Module__Worker__2__inherit__graph.md5  classFlexRP_1_1Worker1-members.html  classFlexRP_1_1Worker1.html  classFlexRP_1_1Worker1__coll__graph.map  classFlexRP_1_1Worker1__coll__graph.md5  classFlexRP_1_1Worker1__inherit__graph.md5  classFlexRP_1_1Worker2-members.html  classFlexRP_1_1Worker2.html  classFlexRP_1_1Worker2__coll__graph.md5  classFlexRP_1_1Worker2__inherit__graph.map  classFlexRP_1_1Worker2__inherit__graph.md5  (+229 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  variables_0.js  variables_1.js  variables_2.js  (+4 more)
etc/config/: config_file.xml  config_file_2.xml
include/: CMakeLists.txt  flexrpsharedmemory.cpp  flexrpsharedmemory.h
logConfigFiles/: logConfig.JSON
recon_modules/: CMakeLists.txt  consumer.cpp  worker1.cpp  worker2.cpp  worker3.cpp
recon_modules/core/: Base_Modules.cpp  Base_Modules.h  CMakeLists.txt
recon_modules/recon_module_1/: CMakeLists.txt  main.cpp  worker1.cpp  worker1.h
recon_modules/recon_module_2/: CMakeLists.txt  main.cpp  worker2.cpp  worker2.h
recon_modules/recon_module_3/: CMakeLists.txt  main.cpp  worker3.cpp  worker3.h
recon_modules/recon_module_4/: CMakeLists.txt  consumer.cpp  main.cpp  worker4.cpp  worker4.h
recon_modules/recon_module_5/: CMakeLists.txt  main.cpp  worker5.cpp  worker5.h
recon_modules/recon_module_6/: CMakeLists.txt  main.cpp  worker6.cpp  worker6.h
recon_modules/recon_module_7/: CMakeLists.txt  main.cpp  worker7.cpp  worker7.h
test/: CMakeLists.txt  test_FlexRPSharedMemory.cpp
